# RaspberryPI_OpenCV

./: .gitignore  CMakeLists.txt  Control.cpp  Control.hpp  Process.cpp  Process.hpp  README.md  Serial.cpp  Serial.hpp  Serial_termios.cpp  Serial_termios.hpp  Untitled Diagram.xml  cmake_install.cmake  image_add.cpp  image_add.hpp  image_track.cpp  image_track.hpp  image_track_pi.cpp  image_track_pi.hpp  main.cpp  trackFilteredObject.cpp  trackFilteredObject.hpp
build_mac/: CMakeCache.txt  cmake_install.cmake
build_mac/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeMinSizeRel  ALL_BUILD_cmakeRulesBuildPhase.makeRelease  ReRunCMake.make  XCODE_DEPEND_HELPER.make  ZERO_CHECK_cmakeRulesBuildPhase.makeDebug  ZERO_CHECK_cmakeRulesBuildPhase.makeMinSizeRel
build_mac/Debug/: main
build_mac/main.build/Debug/ALL_BUILD.build/: Script-72374F84F9824549BBF1C910.sh  dgph
build_mac/main.build/Debug/Control.build/: dgph  dgph~
build_mac/main.build/Debug/Control.build/Objects-normal/x86_64/: Control.LinkFileList  Control.d  Control.dia  Control.gcno
build_mac/main.build/Debug/Process.build/: dgph  dgph~
build_mac/main.build/Debug/Process.build/Objects-normal/x86_64/: Process.LinkFileList  Process.d  Process.gcno
build_mac/main.build/Debug/Serial.build/: dgph  dgph~
build_mac/main.build/Debug/ZERO_CHECK.build/: Script-842C478AB31B4293B912E246.sh  Script-EA5D2F364BBE41C68FC7A9EC.sh  dgph  dgph~
build_mac/main.build/Debug/image_add.build/: dgph  dgph~
build_mac/main.build/Debug/image_track.build/: dgph  dgph~
build_mac/main.build/Debug/main.build/: dgph  dgph~
build_mac/main.build/Debug/serial.build/: dgph~
build_mac/main.build/Debug/trackFilteredObject.build/: dgph  dgph~
build_mac/main.build/Release/ZERO_CHECK.build/: dgph
build_mac/main.build/Release/image_add.build/: dgph
build_mac/main.build/Release/image_track.build/: dgph
build_mac/main.build/Release/main.build/: dgph  dgph~
build_mac/main.xcodeproj/: project.pbxproj
build_mac/main.xcodeproj/project.xcworkspace/xcuserdata/Rozen_mac.xcuserdatad/: UserInterfaceState.xcuserstate
build_mac/main.xcodeproj/xcuserdata/Rozen_mac.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
build_mac/main.xcodeproj/xcuserdata/Rozen_mac.xcuserdatad/xcschemes/: ALL_BUILD.xcscheme  Control.xcscheme  Process.xcscheme  Serial.xcscheme  ZERO_CHECK.xcscheme  image_add.xcscheme  image_track.xcscheme  main.xcscheme  trackFilteredObject.xcscheme  xcschememanagement.plist
build_pi/: CMakeCache.txt  Makefile  cmake_install.cmake  main
project/OpenCV_test/OpenCV_test/: CMakeLists.txt  image_add.hpp  main.cpp
project/OpenCV_test/OpenCV_test.xcodeproj/: project.pbxproj
project/pi_test/: CMakeLists.txt
(+22 files in other folders)
